Closed Bug 1768903 Opened 4 years ago Closed 4 years ago

Cursor gets hidden when executing various keyboard shortcuts

Categories

(Core :: Widget: Win32, defect, P1)

defect

Tracking

()

VERIFIED FIXED
102 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox100 --- unaffected
firefox101 + verified
firefox102 + verified

People

(Reporter: itiel_yn8, Assigned: handyman)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

STR:
Using Windows 10 and latest Nightly, execute various keyboard shortcuts like Ctrl+H, Ctrl+I, Ctrl+L, Ctrl+Shift+J, Ctrl+Shift+Alt+I and many many more.

AR:
The cursor gets hidden for a second or so.

ER:
IMO it shouln't.

Due to https://phabricator.services.mozilla.com/D143849 this doesn't affect the common Ctrl+C, Ctrl+V etc. but this doesn't seem inclusive and I'd expect the hiding-mechanism to not hide the cursor if the Ctrl key was first clicked.

Set release status flags based on info from the regressing bug 1759558

:handyman, since you are the author of the regressor, bug 1759558, could you take a look?
For more information, please visit auto_nag documentation.

Flags: needinfo?(davidp99)
Severity: -- → S3
Priority: -- → P3
Has Regression Range: --- → yes

We've also been experimenting and it does seem that ctrl key sequences are best left out of the cursor-hiding test.

Assignee: nobody → davidp99
Flags: needinfo?(davidp99)
Priority: P3 → P1

Seems like something we probably want to address before 101 goes to RC next week.

(In reply to Ryan VanderMeulen [:RyanVM] from comment #4)

Seems like something we probably want to address before 101 goes to RC next week.

Patch is coming but I don't think this is important enough to cause the mouse-hiding feature to be held back or anything. This issue is very minor -- if you only enter ctrl-key sequences into some text field, then this will hide the cursor until the mouse is moved again, as it (now) does for non-ctrl-keys. That's a pretty extreme case and it's resolved simply by moving the mouse to restore the pointer.

Previously, we ignored cut-and-paste operations, similar to some other applications, but most ctrl-keys do something in the browser that makes hiding the cursor pointless or distracting (like ctrl-j opening the download window).

(In reply to David Parks [:handyman] from comment #5)

if you only enter ctrl-key sequences into some text field

FTR this can happen regardless of text fields.

The severity field for this bug is set to S3. However, the bug is marked as tracked for firefox102 (nightly) and tracked for firefox101 (beta).
:handyman, could you consider increasing the severity of this tracked bug?

For more information, please visit auto_nag documentation.

Flags: needinfo?(davidp99)
Severity: S3 → S2
Flags: needinfo?(davidp99)
Pushed by rvandermeulen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f26e29f4be92 Do not hide Windows mouse cursor when typing ctrl-key sequences r=cmartin

I have experienced this with browser back/forward keys and I have found that many other keys hide the cursor even if they are not related to typing: function keys (VK_F*), browser keys (VK_BROWSER_), media keys (VK_MEDIA_), volumes keys (VK_VOLUME_*) etc.

Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch

The patch landed in nightly and beta is affected.
:handyman, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(davidp99)

Comment on attachment 9276794 [details]
Bug 1768903: Do not hide Windows mouse cursor when typing ctrl-key sequences r=cmartin!

Beta/Release Uplift Approval Request

  • User impact if declined: Mouse will continue to vanish for "Ctrl-<key>" combinations, which some users may find annoying
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The change isn't risky because the code is small, contained, well-understood, and the behavioral change is very minor and unlikely to even be noticed by users who don't care one way or another
  • String changes made/needed:
  • Is Android affected?: No
Attachment #9276794 - Flags: approval-mozilla-beta?
Flags: needinfo?(davidp99)

Comment on attachment 9276794 [details]
Bug 1768903: Do not hide Windows mouse cursor when typing ctrl-key sequences r=cmartin!

Approved for 101.0rc2.

Attachment #9276794 - Flags: approval-mozilla-beta? → approval-mozilla-release+
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Reproduced this issue on an affected Nightly build from 2022-05-11, on Win 10 x64.

Verified as fixed on Firefox 101.0 (20220526203855) and 102.0a1 (20220530093943). The cursor doesn't hide anymore when using Ctrl + key shortcuts.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: