Bug 1768903: Do not hide Windows mouse cursor when typing ctrl-key sequences r=cmartin a=RyanVM

Previously, we ignored cut-and-paste operations, similar to some other applications, but most ctrl-keys do something in the browser that makes hiding the cursor pointless or distracting (like ctrl-j opening the download window).

Differential Revision: https://phabricator.services.mozilla.com/D146506