widget/windows/nsWindow.cpp
@@ -663,14 +663,9 @@ static bool IsMouseVanishKey(WPARAM aVirtKey) {
     case VK_PRIOR:  // PgUp
     case VK_NEXT:   // PgDn
       return false;
-    case 'A':
-    case 'C':
-    case 'V':
-    case 'X':
-      // Ignore Ctrl-A, Ctrl-C, Ctrl-V, Ctrl-X
-      return (GetKeyState(VK_CONTROL) & 0x8000) != 0x8000;
     default:
-      return true;
+      // Return true unless Ctrl is pressed
+      return (GetKeyState(VK_CONTROL) & 0x8000) != 0x8000;
   }
 }
 
